# protocol-cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
JURA WiFi/3D model/: Bottom.stl  JURA Smart Connect WiFi v21.f3d  Top.stl
JURA WiFi/JURA WiFi Dongle/: JURA WiFi Dongle.kicad_prl  JURA WiFi Dongle.kicad_pro  JURA WiFi Dongle.kicad_sch  fp-info-cache
cmake/: clang-tidy.cmake  gcc_analyze.cmake  sanitizer.cmake
protocol_snoops/: keyexchange.md  snoop_bluetooth_1.md  snoop_hello_1.md  snoop_hello_2.md  snoop_hot_water.md  snoop_keep_alive.txt
src/: CMakeLists.txt
src/include/: CMakeLists.txt
src/include/jutta_proto/: CoffeeMaker.hpp  JuttaCommands.hpp  JuttaConnection.hpp
src/include/logger/: Logger.hpp
src/include/serial/: SerialConnection.hpp
src/jutta/: CMakeLists.txt  CoffeeMaker.cpp  CoffeeMaker.hpp  JuttaCommands.hpp  JuttaConnection.cpp  JuttaConnection.hpp
src/jutta_proto/: CMakeLists.txt  CoffeeMaker.cpp  JuttaConnection.cpp
src/logger/: CMakeLists.txt  Logger.cpp
src/serial/: CMakeLists.txt  SerialConnection.cpp  SerialConnection.hpp
src/test_exec/: CMakeLists.txt  handshake_test.cpp
tests/: CMakeLists.txt
